--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
           <version>19.0</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>4.3.2.RELEASE</version>
+      </dependency>
+
       <!-- Logging -->
       <dependency>
           <groupId>org.apache.logging.log4j</groupId>
